TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add filtering to WMI module
 * Fix WMI module
 * Fix PDH problems
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2007-11-04 MickeM
 * Rewritten WMI handling as well as checks so things should be more usefull now (cf. the wiki page for details)

2007-10-29 MickeM
 * Restructured build and include to work from CLI
 + Started to add makefiles to build from CLI
 + Added finnish counters (#98)
 * Fixed performance counter issue with check_nt (#99)
 
2007-10-06 MickeM
 + Added auto-upda-te of versions and dates on build to make versions better updated.
 + Fixed x64 build and cleanup a bit.

2007-09-15 MickeM
 + Added better error messages (now returncodes are displayed as text). Not implemented all over yet but the infrastructure is there.

2007-09-11 MickeM
 + Added Dutch performance counters to counters.defs
 + Added Spanish performance counters to counters.defs
 + Added #69 [includes] directive to INI-file to include other files
 * Fixed #75 (spelling issue)

2007-06-23 MickeM
 * Might have fixed #53 I was not able to get the problem locally but I have fixed the problem ias at op5 discovered atleast...
 * Fixed the "check memory" issues for real this time.
 * Fixed problem with : in counter names #50 (anything starts with \ is considerd a counter so if you use aliases with \ this will break things for you.

2007-06-20 MickeM
 * Fixed #24 crash in NSClient++.exe CheckSystem listpdh | debugpdh
 * Fixed #62 Problems with CheckServiceState and services with spaces.

2007-03-06 MickeM
 ! 0.2.7 released

2007-03-05 MickeM
 * Fixed -v FILEAGE check_nt (NSClient) check.
 * Added licence agreement header to all files

2007-03-04 MickeM
 + Added script_dir option to NRPE scetion as well as some sample scripts in the scripts/